fix button mobile width

--- a/src/blocks/hero/hero.scss
+++ b/src/blocks/hero/hero.scss
@@ -92,6 +92,10 @@
   &__bottom {
     max-width: 385px;
     width: 100%;
+
+    @media screen and (max-width: 576px) {
+      max-width: 100%;
+    }
   }
 
   &__button {
