--- a/src/scss/buttons.scss
+++ b/src/scss/buttons.scss
@@ -27,6 +27,8 @@
   }
 
   @media screen and (max-width: 576px) {
+    width: 100%;
+    max-width: 100%;
   }
 
   &--border {
